webkit2gtk (2.10.1+dfsg1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Wed, 14 Oct 2015 10:57:35 +0300

webkit2gtk (2.10.0+dfsg1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/fix-ftbfs-gcc5.patch:
    + Remove, this has been merged upstream.
  * debian/patches/restore_sparc_code.patch:
    + Remove, this is obsolete.
  * debian/patches/install-minibrowser.patch,
    debian/patches/fix-ftbfs-m68k.patch:
    + Refresh.
  * debian/control:
    + Add build dependency on libhyphen-dev.
    + Build depend on libegl1-mesa-dev and libgles2-mesa-dev on arm64,
      armel and armhf.
  * debian/libwebkit2gtk-4.0-37.symbols:
    + Update.
  * debian/copyright:
    + Remove files that no longer exist from the list.
    + Reorder paragraphs to fix 'unused-paragraph...' lintian warnings.
  * debian/source/lintian-overrides:
    + lintian gives false positives with many of the javascript files in
      the source tarball, thinking that they are minified (see #798900).

 -- Alberto Garcia <berto@igalia.com>  Tue, 22 Sep 2015 17:21:00 +0300

webkit2gtk (2.8.5+dfsg1-3) unstable; urgency=medium

  * debian/rules:
    + Do not run dh_builddeb in parallel, it is very I/O intensive for
      some buildds.

 -- Alberto Garcia <berto@igalia.com>  Thu, 10 Sep 2015 15:01:57 +0300

webkit2gtk (2.8.5+dfsg1-2) unstable; urgency=medium

  * debian/patches/fix-ftbfs-gcc5.patch:
    + Fix FTBFS with GCC 5 in some architectures.

 -- Alberto Garcia <berto@igalia.com>  Mon, 24 Aug 2015 07:41:11 +0300

webkit2gtk (2.8.5+dfsg1-1) unstable; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Fri, 07 Aug 2015 11:25:09 +0300

webkit2gtk (2.8.4+dfsg1-1) unstable; urgency=medium

  * New upstream release.
    + Uses _ABI64 instead of _MIPS_SIM_ABI64 for mips64el. Closes: #789262.
  * debian/patches/fix-ftbfs-m68k.patch:
    + Refreshed.
