@@ -1,6 +1,8 @@
 webkit2gtk (2.10.1+dfsg1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/patches/install-minibrowser.patch:
+    + Refresh.
 
  -- Alberto Garcia <berto@igalia.com>  Wed, 14 Oct 2015 10:57:35 +0300
 
